populated info page and csrf endpoint

--- a/cm-backend/src/main/resources/application.properties
+++ b/cm-backend/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
 spring.mvc.static-path-pattern=/app/**
 spring.resources.static-locations=classpath:/static/, classpath:/app/
+
+
+## Configuring info endpoint
+info.app.name=Competition Manager
+info.app.description=This is my first spring boot application
+info.app.version=0.0.1-SNAPSHOT
